import com.website.gradle.jooq.JooqGeneratorPlugin

plugins {
    id 'org.springframework.boot' version '2.7.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'org.jetbrains.gradle.plugin.idea-ext'
}

group = 'com.websitre'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

apply plugin: JooqGeneratorPlugin
dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation "org.springframework.boot:spring-boot-starter-jooq"
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'io.github.wimdeblauwe:error-handling-spring-boot-starter:3.2.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'com.google.guava:guava:30.1.1-jre'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.13.3'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    runtimeOnly 'org.postgresql:postgresql'
    implementation "org.jooq:jooq:3.18.4"
    implementation 'com.github.database-rider:rider-core:1.35.0'
    implementation 'com.github.database-rider:rider-spring:1.35.0'

    implementation 'org.flywaydb:flyway-core:8.5.12'
    testImplementation 'org.testcontainers:postgresql:1.17.2'
    implementation "com.zaxxer:HikariCP"
}

sourceSets {
    main {
        java {
            srcDirs = ["src/main/java", "src/main/generated-java"]
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
